--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.11.0",
     "sequelize": "^6.32.0",
     "sqlite": "^4.2.1",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   }
 }
